# FOODBANK

./: .gitignore  README.md  app.py  check_sheet.py  config.py  pyproject.toml  remove_duplicate.py  requirement.txt  requirements.txt
.claude/: settings.local.json
notebook/: load_sheets.ipynb  logins_district  nappies_tender_insights.ipynb  prop_type_month  reg_last_week_rel  reg_rel_type  rel_type_week  rela_type_month
pages/: 1_Login.py
routes/: auth.py  dashboard.py  main.py
services/: dash_app.py  dashboard_utils.py  data_service.py  graph_service.py
static/: styles.css
templates/: dashboard.html  home.html  index.html  search.html  statistics.html  update_postcode.html
tests/: conftest.py  test_auth_routes.py  test_dashboard_download.py  test_dashboard_utils.py  test_data_service.py  test_graph_service.py  test_pages.py  test_search_route.py
